--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/main.js" defer></script>
 
     <title>CARA KWON PARSONS PORTFOLIO</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">CARA KWON</a></li>
+            <li><a href="/index.html">CARA KWON</a></li>
         </ul>
     </nav>
 
     <div class="card-black card-hover-shadow">
         <p>THIRD YEAR 2024-2025</p>
-        <a href="/FALL 2024/FALL2024.html" class="card-button">FALL 2024</a>
+        <a href="/FALL 2024/fall2024.html" class="card-button">FALL 2024</a>
         <a href="SPRING2025.HTML" class="card-button">SPRING 2025</a>
     </div>
 </body>
