--- a/FALL 2024/ulec.html
+++ b/FALL 2024/ulec.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="/main.js" defer></script>
 
     <title>CARA KWON PARSONS PORTFOLIO - ULEC</title>
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">CARA KWON</a></li>
+            <li><a href="/index.html">CARA KWON</a></li>
         </ul>
     </nav>
 
