--- a/fall2024/corestudiosys.html
+++ b/fall2024/corestudiosys.html
@@ -21,7 +21,7 @@
         <p>6 E 16TH 1205</p>
         <p>AUG 29TH-DEC 13TH 2024</p>
 
-        <a href="/FALL 2024/corestudsys/P1.html" class="card-button">PROJECT 1</a>
+        <a href="/fall2024/corestudsys/P1.html" class="card-button">PROJECT 1</a>
     </div>
 
     
