--- a/fall2024/fall2024.html
+++ b/fall2024/fall2024.html
@@ -17,11 +17,11 @@
 
     <div class="card-black card-hover-shadow">
         <p>THIRD YEAR 2024-2025</p>
-        <a href="/FALL 2024/corestudiosys.html" class="card-button">CORE STUDIO SYSTEMS</a>
-        <a href="/FALL 2024/corelabsystems.html" class="card-button">CORE LAB SYSTEMS</a>
-        <a href="/FALL 2024/interactiveinteriors.html" class="card-button">INTERACTIVE INTERIORS</a>
-        <a href="/FALL 2024/kineticmodeling.html" class="card-button">KINETIC MODELING</a>
-        <a href="/FALL 2024/ulec.html" class="card-button">ULEC AI, SJ, CREATIVITY</a>
+        <a href="/fall2024/corestudiosys.html" class="card-button">CORE STUDIO SYSTEMS</a>
+        <a href="/fall2024/corelabsystems.html" class="card-button">CORE LAB SYSTEMS</a>
+        <a href="/fall2024/interactiveinteriors.html" class="card-button">INTERACTIVE INTERIORS</a>
+        <a href="/fall2024/kineticmodeling.html" class="card-button">KINETIC MODELING</a>
+        <a href="/fall2024/ulec.html" class="card-button">ULEC AI, SJ, CREATIVITY</a>
     </div>
 </body>
 </html>
