--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="card-black card-hover-shadow">
         <p>THIRD YEAR 2024-2025</p>
-        <a href="/FALL 2024/fall2024.html" class="card-button">FALL 2024</a>
+        <a href="/fall2024/fall2024.html" class="card-button">FALL 2024</a>
         <a href="SPRING2025.HTML" class="card-button">SPRING 2025</a>
     </div>
 </body>
