--- a/fall2024/ulec.html
+++ b/fall2024/ulec.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="main.js" defer></script>
 
     <title>CARA KWON PARSONS PORTFOLIO - ULEC</title>
@@ -17,8 +17,8 @@
 
     <div class="card-black card-hover-shadow">
         <p>ULEC: AI, SOCIAL JUSTICE, CREATIVITY</p>
-        <a href="/fall2024/ulecture.html 2024/corestudiosys.html 2024/FALL2024.html" class="card-button">LECTURE</a>
-        <a href="/fall2024/udiscussion.html 2024/ulec.html 2024/corelabsystems.html" class="card-button">DISCUSSION</a>
+        <a href="/fall2024/ulecture.html" class="card-button">LECTURE</a>
+        <a href="/fall2024/udiscussion.html" class="card-button">DISCUSSION</a>
     </div>
 </body>
 </html>
