--- a/fall2024/corestudsys/P1.html
+++ b/fall2024/corestudsys/P1.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/main.js" defer></script>
 
     <title>CARA KWON'S PORTFOLIO - PROJECT 1: SELF AS SYSTEMS</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">CARA KWON</a></li>
+            <li><a href="/index.html">CARA KWON</a></li>
         </ul>
     </nav>
     <div class="card-black card-hover-shadow">
