--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">CARA KWON</a></li>
+            <li><a href="/index.html">CARA KWON</a></li>
         </ul>
     </nav>
 
