--- a/fall2024/corestudsys/9.19.html
+++ b/fall2024/corestudsys/9.19.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/main.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
 
     <title>CARA KWON'S PORTFOLIO - DUE 9.19 5 in 5</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html">CARA KWON</a></li>
+            <li><a href="index.html">CARA KWON</a></li>
         </ul>
     </nav>
     <div class="card-black card-hover-shadow">
@@ -20,9 +20,9 @@
         <a href="https://docs.google.com/document/d/1dCsqorflwPonb3TnZzHo7PpvKYnJXku_jMjFYE4kQTE/edit">Project Brief</a>
         <a href="https://drive.google.com/drive/folders/1PiYb46kyAygX5ovjItWtxk3hn-pqvK5H">Project Directory</a>
         <h3>Weekly Deliverables</h3>
-        <a href="/fall2024/corestudsys/9.12.html" class="card-button">Data Download Reflection</a>
-        <a href="/fall2024/corestudsys/9.19.html" class="card-button">5 IN 5 </a>
-        <a href="/fall2024/corestudsys/10.03.html" class="card-button">Systems-based Self Project</a>
+        <a href="fall2024/corestudsys/9.12.html" class="card-button">Data Download Reflection</a>
+        <a href="fall2024/corestudsys/9.19.html" class="card-button">5 IN 5 </a>
+        <a href="fall2024/corestudsys/10.03.html" class="card-button">Systems-based Self Project</a>
     </div>
 
 </body>
