--- a/fall2024/ulec.html
+++ b/fall2024/ulec.html
@@ -17,8 +17,8 @@
 
     <div class="card-black card-hover-shadow">
         <p>ULEC: AI, SOCIAL JUSTICE, CREATIVITY</p>
-        <a href="/fall2024/ulecture.html" class="card-button">LECTURE</a>
-        <a href="/fall2024/udiscussion.html" class="card-button">DISCUSSION</a>
+        <a href="fall2024/ulecture.html" class="card-button">LECTURE</a>
+        <a href="fall2024/udiscussion.html" class="card-button">DISCUSSION</a>
     </div>
 </body>
 </html>
