--- a/fall2024/corestudiosys.html
+++ b/fall2024/corestudiosys.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARA KWON'S PORTFOLIO - CORE STUDIO SYSTEM</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/main.js" defer></script>
 </head>
 <body>
 
     <nav>
         <ul>
-            <li><a href="index.html">CARA KWON</a></li>
+            <li><a href="/index.html">CARA KWON</a></li>
         </ul>
     </nav>
     <div class="card-black card-hover-shadow">
