--- a/fall2024/corestudsys/9.12.html
+++ b/fall2024/corestudsys/9.12.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">CARA KWON</a></li>
+            <a href="index.html"class="card-button">CARA KWON</a>
         </ul>
     </nav>
     <div class="card-black card-hover-shadow">
